# gui_sender_telegram_chat

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  telega.py  window.py  window.ui
